erDiagram
    organizations ||--o{ users : "має"
    organizations ||--o{ projects : "володіє"
    users ||--o{ projects : "створює (owner)"
    users ||--o{ memberships : "бере участь"
    projects ||--o{ memberships : "має учасників"
    projects ||--o{ tasks : "містить"
    users ||--o{ tasks : "виконує (assignee)"
    projects ||--o{ documents : "містить"
    users ||--o{ documents : "є автором"
    documents ||--o{ document_approvals : "проходить"
    users ||--o{ document_approvals : "погоджує"
    documents ||--o{ document_history : "має історію"
    documents ||--o{ comments : "має коментарі"
    tasks ||--o{ comments : "має коментарі"
    users ||--o{ comments : "залишає"
    documents ||--o{ attachments : "має файли"
    users ||--o{ attachments : "завантажує"
    users ||--o{ notifications : "отримує"
    users ||--o{ activity_log : "генерує події"
    users ||--o{ document_templates : "створює"
    users ||--o{ document_approvals : "делегує (delegated_from)"

    organizations {
        int id PK
        varchar name
        text description
        timestamptz created_at
    }
    users {
        int id PK
        varchar full_name
        varchar email UK
        varchar password_hash
        user_role role
        int organization_id FK
        timestamptz created_at
    }
    projects {
        int id PK
        varchar title
        text description
        project_status status
        int organization_id FK
        int owner_id FK
        date start_date
        date end_date
        timestamptz created_at
    }
    memberships {
        int id PK
        int user_id FK
        int project_id FK
        varchar role_label
    }
    tasks {
        int id PK
        varchar title
        text description
        task_status status
        task_priority priority
        int project_id FK
        int assignee_id FK
        date due_date
        timestamptz created_at
    }
    documents {
        int id PK
        varchar title
        varchar doc_type
        text content
        document_status status
        int project_id FK
        int author_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    document_approvals {
        int id PK
        int document_id FK
        int approver_id FK
        int step_order
        approval_decision decision
        text comment
        timestamptz decided_at
        timestamptz created_at
    }
    document_history {
        int id PK
        int document_id FK
        int user_id FK
        varchar action
        timestamptz created_at
    }
    comments {
        int id PK
        int document_id FK
        int task_id FK
        int author_id FK
        text body
        timestamptz created_at
    }
    document_templates {
        int id PK
        varchar name
        varchar doc_type
        text content
        int created_by FK
        timestamptz created_at
    }
    attachments {
        int id PK
        int document_id FK
        varchar filename
        varchar original_name
        varchar mime_type
        int size_bytes
        int uploaded_by FK
        timestamptz created_at
    }
    notifications {
        int id PK
        int user_id FK
        varchar type
        text message
        varchar link
        boolean is_read
        timestamptz created_at
    }
    activity_log {
        int id PK
        int user_id FK
        varchar entity_type
        int entity_id
        varchar action
        text summary
        timestamptz created_at
    }
